[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "align"
requires-python = ">3.7"
authors = [{name = "Sarah Ancheta", email = "sarah.ancheta@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest>=3.0",
    "numpy>=2.0.0",
]

[project.urls]
Home = "https://github.com/SarahAncheta/HW5-NW"